Fix NumPy build issues on HPC clusters with old GCC
Problems addressed:
1. NumPy 2.3.5 trying to build from source on GCC 4.8.5
2. Conda using wrong installation (Anaconda vs Miniconda)
3. Long build times and compilation failures

Changes:
- Downgrade Python to 3.10 for better HPC compatibility
- Install NumPy (<2.0) and Pandas from conda (pre-built binaries)
- Prevent pip from building these packages from source
- Add HPC-TROUBLESHOOTING.md with comprehensive solutions for:
  * Using correct Miniconda installation
  * Handling old GCC versions
  * Internet access restrictions
  * Disk quota issues
  * SSL certificate errors
  * Module conflicts
- Update SETUP-HPC.md with Miniconda path configuration
- Update both environment.yml and environment-hpc.yml

This ensures packages install quickly without compilation on clusters
with older system compilers.

--- a/environment-hpc.yml
+++ b/environment-hpc.yml
@@ -3,8 +3,10 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.12
-  - pip>=24.0
+  - python=3.10  # More compatible with older HPC systems
+  - pip>=23.0
+  - numpy>=1.24.0,<2.0  # Install from conda to avoid building
+  - pandas>=2.0.0,<2.2  # Install from conda
   - pyyaml>=6.0
   - requests>=2.31.0
   - tqdm>=4.65.0
@@ -26,9 +28,6 @@ dependencies:
 
     # Logging
     - loguru>=0.7.2
-
-    # Data processing (lightweight versions)
-    - pandas>=2.1.0
 
     # Quality assessment
     - sacrebleu>=2.3.1
